added index.html for use on kana-tutor site.

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 </p><p>
     If you find this code useful, please let me know.
 </p>
-Have Fun<br>
-Steve S.<br>
+Have Fun<br/>
+Steve S.<br/>
 Oct. 2, 2020
 
 <p><img src="./images/Screenshot1.png" 
@@ -101,7 +101,7 @@ width="700" /></p>
         <img src="images/githubIcon.png"
           alt="Github download"
           height="80" />
-    Source downloadable fwrom GitHub
+    Source downloadable from GitHub
 </a></p>
 <p><a href="https://www.apache.org/">
     <img src="images/ApacheSoftwareFoundationLogo.png"
